--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3199,6 +3199,19 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p><em>ⲟⲩⲁⲃ</em> «être pur», <em>ⲧⲟⲩⲃⲟ</em> «purifier»;</p>
     <p><em>ⲟⲩϫⲁⲓ</em> «être sain», <em>ⲧⲟⲩϫⲟ</em> «guérir».</p>
     <p>Dans quelques verbes, elle n'est pas écrite et s'abrège en un simple <i>e muet</i>: <em>ⲧϣⲙⲟ</em> «briser», <em>ⲧⲥⲓⲟ</em> «rassasier».</p>
+    <p>Devant une labiale, <em>ⲧ</em> se change en <em>ⲑ</em> (23):</p>
+    <p><em>ⲓⲣⲓ</em> «faire», <em>ⲑⲣⲟ</em> «faire faire»;</p>
+    <p><em>ⲙⲁⲓ</em> «juste», <em>ⲑⲙⲁⲓⲟ</em> «justifier».</p>
+    <p>Avec <em>ϩ</em>, <em>ⲧ</em> se contracte parfois en <em>ⲑ</em> (3):</p>
+    <p><em>ϩⲟⲣϣ</em> «être lourd», ⲑⲉⲣϣⲟ (<em>ⲧϩⲉⲣϣⲟ</em>) «charger»;</p>
+    <p><em>ϩⲱⲗ</em> «voler», <em>ⲑⲗⲟ</em> «faire envoler».</p>
+    <p>On a <em>ⲧϩⲉⲙⲥⲟ</em> (225) et <em>ⲑⲉⲙⲥⲟ</em> dans le même sens.</p>
+    <p>Lorsque <em>ⲧ</em> et <em>ϣ</em> se rencontrent, ils se contractent parfois en <em>ϫ</em>, parfois <em>ⲧ</em> disparaît, et parfois aussi les deux lettres se maintiennent:</p>
+    <p><em>ϣⲱⲡⲓ</em> «être», <em>ϫⲫⲟ</em> (pour <em>ⲧϣⲡⲟ</em>, 24) «engendrer»,</p>
+    <p><em>ϣⲧⲟ</em> «faire accroupir (les chameaux)»,</p>
+    <p><em>ϣⲱⲟⲩⲓ</em> «sécher», <em>ⲧϣⲟⲩⲓⲟ</em> «faire sécher».</p>
+    <p><i>Remarques.</i></p>
+    <p>1. Quelques verbes transitifs suivent la règle des verbes de cette classe (224), bien qu'ils ne soient pas formés au moyen du préfixe causatif:</p>
   </div>
 </div>
 	</body>
