--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3212,6 +3212,28 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p><em>ϣⲱⲟⲩⲓ</em> «sécher», <em>ⲧϣⲟⲩⲓⲟ</em> «faire sécher».</p>
     <p><i>Remarques.</i></p>
     <p>1. Quelques verbes transitifs suivent la règle des verbes de cette classe (224), bien qu'ils ne soient pas formés au moyen du préfixe causatif:</p>
+    <table>
+      <tr>
+        <td><em>ϭⲟ</em></td><td><em>ϭⲉ-</em></td><td><em>ϭⲟ⸗</em></td><td><em>ϭⲏⲟⲩⲧ</em></td><td>planter,</td>
+      </tr>
+      <tr>
+        <td><em>ϭⲉⲣⲟ</em></td><td><em>ϭⲉⲣⲉ-</em></td><td><em>ϭⲉⲣⲟ⸗</em></td><td><em>ϭⲉⲣⲏⲟⲩⲧ</em></td><td>allumer.</td>
+      </tr>
+    </table>
+    <p>2. Dans un petit nombre de cas l'infinitif pronominal est en <em>ⲱ</em>.</p>
+    <table>
+      <tr>
+        <td><em>ⲗⲁⲗⲟ</em></td><td><em>ⲗⲁⲗⲉ-</em></td><td><em>ⲗⲁⲗⲱ⸗</em></td><td><em>ⲗⲁⲗⲏⲟⲩⲧ</em></td><td>enduire,</td>
+      </tr>
+      <tr>
+        <td><em>ϫⲁⲗⲟ</em></td><td><em>ϫⲁⲗⲉ-</em></td><td><em>ϫⲁⲗⲱ⸗</em></td><td><em>ϫⲁⲗⲏⲟⲩⲧ</em></td><td>héberger.</td>
+      </tr>
+    </table>
+    <p>C. Verbes composés.</p>
+    <p>Les verbes composés sont formés de deux racines:</p>
+    <p>1. Un verbe à l'état construit;</p>
+    <p>2. Un nom, un verbe ou un adverbe.</p>
+    <p>Les deux principaux verbes composants sont <em>ⲉⲣ-</em> et <em>ϯ-</em>.</p>
   </div>
 </div>
 	</body>
