--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3234,6 +3234,22 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p>1. Un verbe à l'état construit;</p>
     <p>2. Un nom, un verbe ou un adverbe.</p>
     <p>Les deux principaux verbes composants sont <em>ⲉⲣ-</em> et <em>ϯ-</em>.</p>
+    <p>1. <em>ⲉⲣ-</em> «faire, devenir».</p>
+    <p>Ce verbe s'unit à différents mots grecs et coptes pour former des verbes neutres:</p>
+    <p><em>ⲉⲣ-ϩⲉⲗⲡⲓⲥ</em> «espérer»,</p>
+    <p><em>ⲉⲣ-ⲟⲩⲱ</em> «répondre»,</p>
+    <p><em>ⲉⲣ-ⲛⲓϣϯ</em> «grandir»,</p>
+    <p><em>ⲉⲣ-ϩⲙⲟⲧ</em> «faire don de»,</p>
+    <p><em>ⲉⲣ-ⲥⲟⲫⲟⲥ</em> «devenir sage»,</p>
+    <p><em>ⲉⲣ-ⲟⲩⲱⲓⲛⲓ</em> «briller».</p>
+    <p><em>ⲉⲣ-ϩⲟⲩⲟ-</em> «faire beaucoup» est toujours suivi d'un autre mot qui sert de complément à <em>ⲉⲣ-</em>:</p>
+    <p><em>ⲉⲣ-ϩⲟⲩⲟ-ϭⲓⲥⲓ</em> «exalter grandement».</p>
+    <p>Le verbe <em>ⲉⲣ-</em> précède tous les verbes grecs employés en copte sans modifier en rien leur sens:</p>
+    <p><em>ⲉⲣ-ⲁⲅⲓⲁⲍⲓⲛ</em> «sanctifier»,</p>
+    <p><em>ⲉⲣ-ⲡⲣⲟⲥⲉⲩⲭⲉⲥⲑⲉ</em> «prier»,</p>
+    <p><em>ⲉⲣ-ⲉⲝⲱⲣⲓⲍⲓⲛ</em> «exiler»,</p>
+    <p><em>ⲉⲣ-ⲡⲓⲣⲁⲍⲓⲛ</em> «éprouver».</p>
+    <p>L'impératif de <em>ⲉⲣ-</em> est <em>ⲁⲣⲓ-</em> même dans les composés: <em>ⲁⲣⲓ-ϩⲙⲟⲧ</em>, <em>ⲁⲣⲓ-ⲁⲅⲓⲁⲍⲓⲛ</em>.</p>
   </div>
 </div>
 	</body>
