--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3250,6 +3250,17 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p><em>ⲉⲣ-ⲉⲝⲱⲣⲓⲍⲓⲛ</em> «exiler»,</p>
     <p><em>ⲉⲣ-ⲡⲓⲣⲁⲍⲓⲛ</em> «éprouver».</p>
     <p>L'impératif de <em>ⲉⲣ-</em> est <em>ⲁⲣⲓ-</em> même dans les composés: <em>ⲁⲣⲓ-ϩⲙⲟⲧ</em>, <em>ⲁⲣⲓ-ⲁⲅⲓⲁⲍⲓⲛ</em>.</p>
+    <p>2. <em>ϯ</em> «donner».</p>
+    <p>Ce verbe s'unit à plusieurs mots coptes pour former des verbes composés qui gouvernent tous le datif avec <em>ⲛ̀</em>:</p>
+    <p><em>ϯ-ⲥⲃⲱ</em> «instruire»,</p>
+    <p><em>ϯ-ⲱⲟⲩ</em> «glorifier»,</p>
+    <p><em>ϯ-ⲱⲙⲥ</em> «baptiser»,</p>
+    <p><em>ϯ-ϣⲓ</em> «mesurer».</p>
+    <p>Il s'unit rarement aux noms grecs: <em>ϯ-ⲙⲉⲧⲁⲛⲓⲁ</em> «s'incliner».</p>
+    <p>L'impératif de tous ces verbes se forme en remplaçant <em>ϯ-</em> par <em>ⲙⲁ-</em>: <em>ⲙⲁⲥⲃⲱ</em>, <em>ⲙⲁⲱⲟⲩ</em>.</p>
+    <p><i>Exceptions:</i></p>
+    <p><em>ϯϩⲟ</em> «prier», <i>impér.</i> <em>ⲙⲁϯϩⲟ</em>;</p>
+    <p><em>ϯⲟⲩⲱ</em> «cesser», <i>impér.</i> <em>ⲙⲁϯⲟⲩⲱ</em>.</p>
   </div>
 </div>
 	</body>
