--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3261,6 +3261,40 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p><i>Exceptions:</i></p>
     <p><em>ϯϩⲟ</em> «prier», <i>impér.</i> <em>ⲙⲁϯϩⲟ</em>;</p>
     <p><em>ϯⲟⲩⲱ</em> «cesser», <i>impér.</i> <em>ⲙⲁϯⲟⲩⲱ</em>.</p>
+    <p>3. Autres verbes composants.</p>
+    <p>Tous les verbes coptes à l'état construit forment avec leur complément, pour ainsi dire, un seul mot composé. Mais il en est quelques-uns, plus fréquents et plus remarquables, dans lesquels la composition est plus intime. Tels sont:</p>
+    <p><em>ϣⲉⲡ-</em> de <em>ϣⲱⲡ</em> «recevoir»:</p>
+    <p><em>ϣⲉⲡ-ϧⲓⲥⲓ</em> «souffrir»,</p>
+    <p><em>ϣⲉⲡ-ϩⲙⲟⲧ</em> «remercier».</p>
+    <p><em>ϫⲉⲙ-</em> de <em>ϫⲓⲙⲓ</em> «trouver»:</p>
+    <p><em>ϫⲉⲙ-ⲛⲟⲙϯ</em> «se fortifier»,</p>
+    <p><em>ϫⲉⲙ-ϩⲏⲟⲩ</em> «gagner»,</p>
+    <p><em>ϫⲉⲙ-ϫⲟⲙ</em> «être puissant»,</p>
+    <p><em>ϫⲉⲙ-ϯⲡⲓ</em> «goûter».</p>
+    <p><em>ϩⲓ-</em> de <em>ϩⲓⲟⲩⲓ</em> «jeter»:</p>
+    <p><em>ϩⲓ-ⲧⲟⲧ⸗</em> «entreprendre»,</p>
+    <p><em>ϩⲓ-ⲡϩⲟ</em> «mépriser».</p>
+    <p><em>ϭⲓ-</em> de <em>ϭⲓ</em> «prendre»:</p>
+    <p><em>ϭⲓ-ⲥⲁⲣⲝ</em> «s'incarner»,</p>
+    <p><em>ϭⲓ-ⲥⲃⲱ</em> «instruire».</p>
+    <p><em>ⲟⲩⲁϩ-</em> de <em>ⲟⲩⲟϩ</em> «ajouter»:</p>
+    <p><em>ⲟⲩⲁϩ-ⲥⲁϩⲛⲓ</em> «ordonner»,</p>
+    <p><em>ⲟⲩⲁϩ-ⲧⲟⲧ⸗</em> «faire de nouveau».</p>
+    <p><em>ⲟⲩⲁϩⲉⲙ-</em> de <em>ⲟⲩⲱϩⲉⲙ</em> «répéter»:</p>
+    <p><em>ⲟⲩⲁϩⲉⲙ-ⲙⲓⲥⲓ</em> «régénérer»,</p>
+    <p><em>ⲟⲩⲁϩⲉⲙ-ⲕⲱⲧ</em> «réédifier».</p>
+    <p>Chapitre XI.</p>
+    <p>Conjugaison du Verbe.</p>
+    <p>1. La conjugaison copte n'a qu'une seule voix, la voix active. A l'exception du premier présent et du premier futur qui ont une formation particulière, tous les temps sont composés de la même manière et comprennent trois parties:</p>
+    <p>1. une particule ou verbe auxiliaire,</p>
+    <p>2. le sujet, nom ou pronom affixe,</p>
+    <p>3. le verbe.</p>
+    <p>2. Le verbe est à l'infinitif ou au qualitatif.</p>
+    <p>Le qualitatif ne s'emploie qu'aux <i>trois premiers présents</i> et à <i>l'imparfait</i> de l'indicatif.</p>
+    <p>3. A ces mêmes temps le verbe peut être remplacé par une construction prépositive ou un adverbe; l'auxiliaire fait alors fonction de verbe dans le sens de «être». Il en est de même au premier présent, bien que celui-ci n'ait pas d'auxiliaire; la proposition est nominale.</p>
+    <p>Le tableau suivant donne:</p>
+    <p>1. la forme de l'auxiliaire uni aux pronoms affixes,</p>
+    <p>2. sa forme abrégée devant le nom sujet.</p>
   </div>
 </div>
 	</body>
