--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3295,6 +3295,45 @@ En français, pour plus de commodité, nous traduisons le qualitatif des verbes 
     <p>Le tableau suivant donne:</p>
     <p>1. la forme de l'auxiliaire uni aux pronoms affixes,</p>
     <p>2. sa forme abrégée devant le nom sujet.</p>
+    <p>Pour compléter le temps, il faut, dans le premier cas, ajouter le verbe; dans le second, le nom sujet et le verbe. Ex: <em>ϯ-ⲙⲉⲓ</em> «j'aime», <em>ϯⲛⲁ-ⲙⲉⲓ</em> «j'aimerai»; <em>ⲡⲓⲁⲗⲟⲩ ⲙⲉⲓ</em> «l'enfant aime», <em>ⲡⲓⲁⲗⲟⲩ ⲛⲁ-ⲙⲉⲓ</em> «l'enfant aimera», etc.</p>
+    
+    <p>Dans <em>ⲉⲣⲉ</em>, <em>ⲁⲣⲉ</em>, <em>ⲛⲁⲣⲉ</em>, <em>ⲙ̀ⲡⲁⲣⲉ</em>, la syllabe ajoutée <em>ⲣⲉ</em> ne se maintient qu'à la 2 f. sg., à la 2 pl. et devant un nom; partout ailleurs elle disparaît.</p>
+    <p>Les auxiliaires simples <em>ⲉ</em>, <em>ⲛⲉ</em> ne s'emploient sous cette forme qu'avec des temps déjà constitués, pour en modifier le sens (247, 248, 364).</p>
+    <p>L'auxiliaire <em>-ⲣⲉ</em> ne s'emploie jamais seul.</p>
+    <p>A tous les temps formés de <em>ⲛⲉ</em> et de <em>ⲛⲁⲣⲉ</em> on peut employer après le verbe la copule <em>ⲡⲉ</em>.</p>
+    <p>Aux auxiliaires on unit, pour indiquer les personnes, les pronoms affixes donnés au n<sup>ⲟ</sup> 58.</p>
+    <p>Devant <em>ⲛ</em> et <em>ⲟⲩ</em>, l'affixe <em>ⲕ</em> de la 2 m. sg. se change ordinairement en <em>ⲭ</em> (23).</p>
+    <p><em>ⲭⲟⲩⲁⲃ</em> «tu es saint»: <em>ⲭⲛⲁⲃⲱⲗ</em> «tu délieras».</p>
+    <p>Au premier présent et au premier futur, l'ancien auxiliaire <em>ⲧⲉ</em> ne s'est conservé qu'aux quatre personnes <em>ϯ</em> (de <em>ⲧ</em> et <em>ⲓ</em>), <em>ⲧⲉ</em>, <em>ⲧⲉⲛ</em>, <em>ⲧⲉⲧⲉⲛ</em>. Les autres personnes ne comprennent que deux éléments, le sujet et le verbe.</p>
+    <p>Pour le reste de la construction, ces deux temps sont semblables aux autres.
+Quelques verbes se conjuguent impersonnellement avec l'affixe <em>ⲥ</em> du neutre pour sujet.</p>
+    <p>Les formes les plus fréquentes sont:</p>
+    <p><em>ⲁⲥϣⲱⲡⲓ</em> «il arriva»;</p>
+    <p><em>ⲥ-ⲥϧⲏⲟⲩⲧ</em> «il est écrit»;</p>
+    <p><em>ⲥ-ⲉⲙⲡϣⲁ</em> «il convient»;</p>
+    <p><em>ⲥ-ⲙⲟⲕϩ</em> «il est difficile»;</p>
+    <p><em>ⲥ-ⲙⲟⲧⲉⲛ</em> «il est facile»;</p>
+    <p><em>ⲉⲥⲉϣⲱⲡⲓ</em> «qu'il arrive».</p>
+    <p>Dans les livres liturgiques, à la fin des prières, <em>ⲉⲥⲉϣⲱⲡⲓ</em> signifie «ainsi soit-il».</p>
+    <p>I. Indicatif.</p>
+    <p>A. Présent.</p>
+    <p>Il y a quatre sortes de présents qui diffèrent par la forme et par le sens.</p>
+    <p><i>Premier présent.</i></p>
+    <p>Le premier est le présent <i>d'actualité</i>. Il indique une action ou énonce un fait qui a lieu au moment même où l'on parle:</p>
+    <p><em>ϯϫⲱ ⲙ̀ⲙⲟⲥ ⲛⲁⲕ ⲧⲱⲛⲕ</em> «je te le dis, lève-toi»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲧⲉⲥⲙⲁⲣⲱⲟⲩⲧ</em> (232, 2) <em>ⲛ̀ⲑⲟ ϧⲉⲛ ⲛⲓϩⲓⲟⲙⲓ</em> «tu es bénie entre les femmes»<sup class="footnote">2</sup>.</p>
+    <p><em>ϯⲛⲉⲙⲱⲧⲉⲛ</em> (232, 3) «je suis avec vous»<sup class="footnote">3</sup>.</p>
+    <p>La construction est la même lorsque le sujet est un nom. Celui-ci précède toujours le verbe, mais il peut en être séparé par un complément déterminatif:</p>
+    <p><em>ⲫⲓⲱⲧ ⲙⲉⲓ ⲙ̀ⲡϣⲏⲣⲓ</em> «le Père aime le Fils»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲧⲉϥⲙⲉⲑⲙⲏⲓ ϣⲟⲡ</em> (232, 2) <em>ϣⲁ ⲉⲛⲉϩ</em> «sa justice demeure jusqu'à l'éternité»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲡⲉⲕⲥⲁϩⲟⲩⲓ ⲉϩⲣⲏⲓ ⲉϫⲱⲛ</em> (232, 3) «ta malédiction est sur nous»<sup class="footnote">6</sup>.</p>
+    <p>Lorsque le sujet n'a pas d'article ou a l'article indéfini, il est introduit par <em>ⲟⲩⲟⲛ</em> dans la proposition affirmative et par <em>ⲙ̀ⲙⲟⲛ</em> dans la proposition négative (303).</p>
+    <p class="footnote">1. Luc 7, 14.</p>
+    <p class="footnote">2. Luc 1, 42.</p>
+    <p class="footnote">3. Jean 14, 9.</p>
+    <p class="footnote">4. Jean 3, 35.</p>
+    <p class="footnote">5. Ps. 111, 3.</p>
+    <p class="footnote">6. Gen. 27, 13.</p>
   </div>
 </div>
 	</body>
