--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3334,6 +3334,49 @@ Quelques verbes se conjuguent impersonnellement avec l'affixe <em>ⲥ</em> du ne
     <p class="footnote">4. Jean 3, 35.</p>
     <p class="footnote">5. Ps. 111, 3.</p>
     <p class="footnote">6. Gen. 27, 13.</p>
+    <p><i>Second présent <em>ⲁⲣⲉ-</em>, <em>ⲁ⸗</em>.</i></p>
+    <p>1. Le second présent est le présent de <i>l'interrogation</i>, c'est le temps qui s'emploie quand la phrase est interrogative:</p>
+    <p><em>ⲁⲕⲑⲱⲛ ⲁⲇⲁⲙ</em> (232, 3) «Adam, où es-tu?»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁⲕⲛⲁⲩ ⲉ ⲡⲁⲓⲥⲧⲩⲗⲟⲥ</em> «vois-tu cette colonne?»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲁⲣⲉⲛⲏⲟⲩ ⲉⲃⲟⲗ ⲑⲱⲛ ⲟⲩⲟϩ ⲁⲣⲉⲛⲁ ⲉⲑⲱⲛ</em> «d'où viens-tu et où vas-tu?»<sup class="footnote">3</sup>.</p>
+    <p>2. Le second présent s'emploie aussi, en dehors des phrases interrogatives, dans un sens <i>général</i>, <i>sententieux</i>, <i>qualitatif</i>:</p>
+    <p><em>ⲡⲉⲛⲛⲟⲩϯ ⲇⲉ ⲁϥϧⲉⲛ ⲧⲫⲉ</em> (232, 3) «notre Dieu est au ciel»<sup class="footnote">4</sup>.</p>
+    <p>3. A ce temps, la négation <em>ⲛ̀</em> s'unit au verbe tout à fait comme <em>ⲛⲉ</em> à l'imparfait.</p>
+    <p>On distinguera le 2<sup>e</sup> présent négatif de l'imparfait négatif: 1° par l'accent que devrait toujours porter <em>ⲛ̀</em>; 2° par l'absence de <em>ⲡⲉ</em> qui accompagne toujours l'imparfait:</p>
+    <p><i>2<sup>e</sup> présent:</i> <em>ⲛ̀ⲁϥⲟⲩⲱϣ ⲁⲛ</em> «il ne veut pas»,</p>
+    <p><i>imparfait:</i> <em>ⲛⲁϥⲟⲩⲱϣ ⲁⲛ ⲡⲉ</em> «il ne voulait pas».</p>
+    <p><i>Troisième présent <em>ⲉⲣⲉ-</em>, <em>ⲉ⸗</em>.</i></p>
+    <p>Le troisième présent est le présent de <i>l'état</i>. Il s'emploie pour exprimer une circonstance qui se rattache au sujet ou au régime du verbe principal; il correspond à peu près au <i>participe</i> français et au <em>حال</em> arabe. Il forme donc toujours une proposition dépendante:</p>
+    <p><em>ⲁϥⲓ̀ ⲟⲛ ϩⲁ ⲛⲉϥⲙⲁⲑⲏⲧⲏⲥ ⲁϥϫⲉⲙⲟⲩ ⲉⲩⲉⲛⲕⲟⲧ</em> «il revint vers ses disciples et les trouva dormant»<sup class="footnote">5</sup>.</p>
+    <p class="footnote">1. Gen. 3, 9.</p>
+    <p class="footnote">2. Kef. 333.</p>
+    <p class="footnote">3. Gen. 16, 8.</p>
+    <p class="footnote">4. Ps. 113, 11.</p>
+    <p class="footnote">5. Mt. 26, 43.</p>
+    <p><em>ⲁϥⲉⲣⲟⲩⲱ ⲉϥϫⲱ ⲙ̀ⲙⲟⲥ</em> «il répondit disant».</p>
+    <p><em>ⲁⲩⲓ̀ ⲉⲃⲟⲗ ⲉⲣⲉ ϩⲁⲛϩⲟⲡⲗⲟⲛ ⲛ̀ⲧⲟⲧⲟⲩ</em> «ils sortirent les armes à la main»<sup class="footnote">1</sup>.</p>
+    <p><em>ϩⲏⲡⲡⲉ ⲓⲥ ⲣⲉⲃⲉⲕⲕⲁ ⲛⲁⲥⲛⲏⲟⲩ ⲉⲃⲟⲗ ⲉⲣⲉ ⲧⲉⲥϩⲩⲇⲣⲓⲁ ϩⲓ ⲧⲉⲥⲛⲁϩⲃⲓ</em> «voici que Rébecca venait, sa jarre sur l'épaule»<sup class="footnote">2</sup>.</p>
+    <p><i>Présent d'habitude <em>ϣⲁⲣⲉ-</em>, <em>ϣⲁ⸗</em>».</i></p>
+    <p>1. Il indique un acte qui se répète, une coutume; quelquefois il a le sens du passé; le verbe ne s'emploie qu'à l'infinitif:</p>
+    <p><em>ϣⲁⲩⲥⲟϭⲛⲓ ⲛⲉⲙ ⲛⲟⲩⲉⲣⲏⲟⲩ ⲛ̀ϫⲉ ⲛⲓⲟⲩⲏⲃ</em> «les prêtres délibèrent entr'eux»<sup class="footnote">3</sup>.</p>
+    <p><em>ϣⲁϥⲟϩⲓ ϧⲉⲛ ⲟⲩⲙⲁⲛ̀ⲥⲁϩⲣⲉ</em> «il avait coutume de se tenir dans un lieu désert»<sup class="footnote">4</sup>.</p>
+    <p><em>ϣⲁⲣⲉ ⲛⲓⲁⲥⲉⲃⲏⲥ ⲉⲣϩⲉⲙⲓ ⲛ̀ϩⲁⲛⲭⲣⲟϥ</em> «les impies pratiquent la fraude»<sup class="footnote">5</sup>.</p>
+    <p>2. Le correspondant négatif de ce temps est fourni par l'auxiliaire <em>ⲙ̀ⲡⲁⲣⲉ-</em>, <em>ⲙ̀ⲡⲁ⸗</em> qui semble être composé de <em>ⲙ̀ⲡⲉ</em> et de<em>ⲁⲣⲉ</em>:</p>
+    <p><em>ⲙ̀ⲡⲁⲩϣⲛⲁϩⲙⲟⲩ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲓⲡⲟⲗⲉⲙⲟⲥ</em> «ils ne peuvent se sauver de la guerre»<sup class="footnote">6</sup>.</p>
+    <p>Des dieux <em>ⲙ̀ⲡⲁⲩⲛⲁⲩ ⲟⲩⲇⲉ ⲙ̀ⲡⲁⲩⲥⲱⲧⲉⲙ</em> «qui ne voient ni n'entendent»<sup class="footnote">7</sup>.</p>
+    <p><em>ⲙ̀ⲡⲁⲣⲉ ⲡⲉⲥϧⲏⲃⲥ ϭⲉⲛⲟ ⲙ̀ⲡⲓⲉϫⲱⲣϩ ⲧⲏⲣϥ</em> «sa lampe ne s'éteint pas de toute la nuit»<sup class="footnote">8</sup>.</p>
+    <p class="footnote">1. MS. 422.</p>
+    <p class="footnote">2. Gen. 24, 45.</p>
+    <p class="footnote">3. Bar. 6, 48.</p>
+    <p class="footnote">4. Kef. 335.</p>
+    <p class="footnote">5. Pr. 12, 5.</p>
+    <p class="footnote">6. Bar. 6, 49.</p>
+    <p class="footnote">7. Deut. 4, 28.</p>
+    <p class="footnote">8. Pr. 31, 10.</p>
+    <p>B. Futur.</p>
+    <p>Les trois premiers futurs sont formés des trois premiers présents par l'addition de <em>ⲛⲁ-</em>, forme abrégée du verbe <em>ⲛⲟⲩⲓ</em> «être sur le point de, aller».</p>
+    <p>Ils offrent respectivement les mêmes nuances de sens que les présents correspondants.</p>
+    <p><i>Premier futur.</i></p>
   </div>
 </div>
 	</body>
