--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3377,6 +3377,18 @@ Quelques verbes se conjuguent impersonnellement avec l'affixe <em>ⲥ</em> du ne
     <p>Les trois premiers futurs sont formés des trois premiers présents par l'addition de <em>ⲛⲁ-</em>, forme abrégée du verbe <em>ⲛⲟⲩⲓ</em> «être sur le point de, aller».</p>
     <p>Ils offrent respectivement les mêmes nuances de sens que les présents correspondants.</p>
     <p><i>Premier futur.</i></p>
+    <p><em>ϯⲛⲁ-ⲧⲁⲕⲱⲟⲩ ⲛⲉⲙ ⲡⲓⲕⲁϩⲓ</em> «je les perdrai avec la terre»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲧⲉⲧⲉⲛⲛⲁ-ⲕⲱϯ ⲛ̀ⲥⲱⲓ ⲟⲩⲟϩ ⲧⲉⲧⲉⲛⲛⲁ-ϫⲉⲙⲧ ⲁⲛ</em> «vous me chercherez et vous ne me trouverez pas»<sup class="footnote">2</sup>.</p>
+    <p>La 2 f. sing. <em>ⲧⲉⲣⲁ</em> est de formation spéciale; l'origine de cette forme n'est pas absolument certaine.</p>
+    <p>Le nom sujet se comporte comme au premier présent:</p>
+    <p><em>ⲡϭⲟⲓⲥ ⲛⲁϣⲓⲛⲓ ⲉⲣⲱⲧⲉⲛ</em> «le Seigneur vous visitera»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲫⲁⲣⲁⲱ ⲛⲁⲥⲱⲧⲉⲙ ⲛ̀ⲥⲁ ⲑⲏⲛⲟⲩ ⲁⲛ</em> «Pharaon ne vous écoutera pas»<sup class="footnote">4</sup>.
+Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> dans la proposition affirmative et par <em>ⲙ̀ⲙⲟⲛ</em> dans la proposition négative (303).</p>
+    <p><i>Deuxième futur <em>ⲁⲣⲉ- ⲛⲁ-</em>, <em>ⲁ⸗ ⲛⲁ-</em>.</i></p>
+    <p class="footnote">1. Gen. 6, 13.</p>
+    <p class="footnote">2. Jean 8, 21.</p>
+    <p class="footnote">3. Ex. 13, 19.</p>
+    <p class="footnote">4. Ex. 11, 9.</p>
   </div>
 </div>
 	</body>
