--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3389,6 +3389,16 @@ Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> d
     <p class="footnote">2. Jean 8, 21.</p>
     <p class="footnote">3. Ex. 13, 19.</p>
     <p class="footnote">4. Ex. 11, 9.</p>
+    <p><em>ⲁⲩⲛⲁⲭⲱⲃ ⲑⲱⲛ ⲛⲉⲙ ⲛⲟⲩⲛⲟⲩϯ</em> «où se cacheront-ils avec leurs dieux?»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁⲩⲛⲁⲉⲣ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲛⲓⲁⲅⲅⲉⲗⲟⲥ</em> «ils seront comme les anges»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲁⲣⲉ ⲧⲁϣⲃⲱⲃⲓ ⲛⲁⲉⲣⲙⲉⲗⲉⲧⲁⲛ ⲛ̀ϩⲁⲛⲙⲉⲑⲙⲏⲓ</em> «mon gosier méditera la justice»<sup class="footnote">3</sup>.</p>
+    <p><i>Troisième futur <em>ⲉⲣⲉ- ⲛⲁ-</em>, <em>ⲉ⸗ ⲛⲁ-</em>.</i></p>
+    <p><em>ⲉϥⲉⲟⲩⲛⲟϥ ⲉϥⲛⲁⲣⲱⲧ</em> «il se réjouira en croissant»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲡⲓϧⲁⲉ ⲛ̀ⲥⲟⲡ ⲡⲉ ⲫⲁⲓ ⲉⲣⲉ ⲡⲉⲕⲓⲱⲧ ⲛⲁ-ϩⲓⲟⲩⲓ ⲛ̀ⲟⲩⲙⲱⲟⲩ ⲉ-ⲟⲩⲗⲁⲕⲁⲛⲏ</em> «c'est la dernière fois que ton père jette de l'eau dans un bassin»<sup class="footnote">5</sup>.</p>
+    <p><i>Futur énergique <em>ⲉⲣⲉ-</em>, <em>ⲉ⸗ ⲉ-</em>.</i></p>
+    <p>Ce futur exprime la certitude, la volonté, le commandement:</p>
+    <p><em>ⲉⲕⲉⲙⲉⲛⲣⲉ ⲡⲉⲕϣⲫⲏⲣ ⲙ̀ⲡⲉⲕⲣⲏϯ</em> «tu aimeras ton prochain comme toi-même»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲉⲣⲉⲙⲓⲥⲓ ⲛ̀ⲟⲩϣⲏⲣⲓ</em> «tu enfanteras un fils»<sup class="footnote">7</sup>.</p>
   </div>
 </div>
 	</body>
