--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3399,6 +3399,16 @@ Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> d
     <p>Ce futur exprime la certitude, la volonté, le commandement:</p>
     <p><em>ⲉⲕⲉⲙⲉⲛⲣⲉ ⲡⲉⲕϣⲫⲏⲣ ⲙ̀ⲡⲉⲕⲣⲏϯ</em> «tu aimeras ton prochain comme toi-même»<sup class="footnote">6</sup>.</p>
     <p><em>ⲉⲣⲉⲙⲓⲥⲓ ⲛ̀ⲟⲩϣⲏⲣⲓ</em> «tu enfanteras un fils»<sup class="footnote">7</sup>.</p>
+    <p>Il est formé du 3<sup>e</sup> présent et de la préposition <em>ⲉ</em> «vers». La 2 f. sg. <em>ⲉⲣⲉ</em> est pour <em>ⲉⲣⲉⲉ</em>. Devant un nom, on emploie <em>ⲉⲣⲉ-</em> seul ou <em>ⲉⲣⲉ-</em> avec répétition de l'auxiliaire:</p>
+    <p><em>ⲉⲣⲉ ⲡⲓⲣⲱⲙⲓ ⲭⲁ-ⲡⲉϥⲓⲱⲧ ⲛⲉⲙ ⲧⲉϥⲙⲁⲩ</em> «l'homme laissera son père et sa mère»<sup class="footnote">8</sup>.</p>
+    <p class="footnote">1. Bar. 6, 48.</p>
+    <p class="footnote">2. Mt. 22, 30.</p>
+    <p class="footnote">3. Pr. 8, 7.</p>
+    <p class="footnote">4. Ps. 64, 11.</p>
+    <p class="footnote">5. Test. 6.</p>
+    <p class="footnote">6. Mt. 19, 19.</p>
+    <p class="footnote">7. Gen. 16, 11.</p>
+    <p class="footnote">8. Gen. 2, 24.</p>
   </div>
 </div>
 	</body>
