--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3409,6 +3409,31 @@ Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> d
     <p class="footnote">6. Mt. 19, 19.</p>
     <p class="footnote">7. Gen. 16, 11.</p>
     <p class="footnote">8. Gen. 2, 24.</p>
+    <p><em>ⲉⲣⲉ ⲡⲓⲟⲩⲏⲃ ⲉϥⲉⲧⲁⲗⲟ ⲉϫⲉⲛ ⲡⲓⲙⲁⲛ̀ⲉⲣϣⲱⲟⲩϣⲓ ⲛ̀ⲟⲩⲟⲩⲧⲁϩ</em> «le prêtre offrira des fruits sur l'autel»<sup class="footnote">1</sup>.</p>
+    <p>Le correspondant négatif est fourni par l'auxiliaire <em>ⲛ̀ⲛⲉ-</em>, <em>ⲛ̀ⲛ⸗</em>:</p>
+    <p><em>ⲛ̀ⲛⲉⲕϧⲱⲧⲉⲃ ⲛ̀ⲛⲉⲕϭⲓⲟⲩⲓ</em> «tu ne tueras pas, tu ne voleras pas»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲛ̀ⲛⲉ ⲡϭⲟⲓⲥ ϧⲱⲑⲃⲉⲥ</em> «le Seigneur ne la tuera pas»<sup class="footnote">3</sup>.</p>
+    <p>C. Imparfait. <em>ⲛⲁⲣⲉ-</em>, <em>ⲛⲁ⸗ … ⲡⲉ</em>.</p>
+    <p>Ce temps a le sens de l'imparfait français:</p>
+    <p><em>ⲛⲁⲣⲉ ⲫⲛⲟⲩϯ ⲭⲏ ⲛⲉⲙ ⲡⲓⲁⲗⲟⲩ ⲡⲉ</em> «Dieu était avec l'enfant»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲛⲁϥ-ϧⲁϫⲱⲟⲩ</em> (232, 3) <em>ⲡⲉ ⲛ̀ϫⲉ ⲫⲁⲣⲁⲱ</em> «Pharaon était à leur tête»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲁⲛⲟⲕ ⲛⲁⲓⲥⲱⲟⲩⲛ ⲙ̀ⲙⲟϥ ⲁⲛ ⲡⲉ</em> «moi, je ne le connaissais pas»<sup class="footnote">6</sup>.</p>
+    <p>Quand le sujet est un nom, on répète parfois l'auxiliaire:</p>
+    <p><em>ⲛⲁⲣⲉ ⲡⲓⲗⲁⲟⲥ ⲧⲏⲣϥ ⲛⲁϥϫⲟⲩϣⲧ ⲉⲃⲟⲗ ϧⲁϫⲱϥ</em> «tout le peuple l'attendait»<sup class="footnote">7</sup>.</p>
+    <p><i>Imparfait du futur <em>ⲛⲁⲣⲉ- ⲛⲁ</em>, <em>ⲛⲁ⸗ ⲛⲁ … ⲡⲉ</em>.</i></p>
+    <p>Ce temps signifie «être sur le point de, aller» à l'imparfait.</p>
+    <p>Il correspond au participe futur latin. Il a aussi le sens du futur antérieur français:</p>
+    <p><em>ⲑⲁⲓ ⲛⲁⲥⲛⲁⲙⲟⲩ ⲡⲉ</em> «elle allait mourir (erat moritura)»<sup class="footnote">8</sup>.</p>
+    <p><em>ⲛⲁⲣⲉ ⲡⲁⲥⲟⲛ ⲛⲁⲙⲟⲩ ⲁⲛ ⲡⲉ</em> «mon frère ne serait pas mort»<sup class="footnote">9</sup>.</p>
+    <p class="footnote">1. Lév. 2, 9.</p>
+    <p class="footnote">2. Mt. 19, 18.</p>
+    <p class="footnote">3. Pr. 10, 3.</p>
+    <p class="footnote">4. Gen. 21, 20.</p>
+    <p class="footnote">5. Ex. 14, 10.</p>
+    <p class="footnote">6. Jean 1, 31.</p>
+    <p class="footnote">7. Luc 1, 21.</p>
+    <p class="footnote">8. Luc 8, 42.</p>
+    <p class="footnote">9. Jean 11, 32.</p>
   </div>
 </div>
 	</body>
