--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3434,6 +3434,50 @@ Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> d
     <p class="footnote">7. Luc 1, 21.</p>
     <p class="footnote">8. Luc 8, 42.</p>
     <p class="footnote">9. Jean 11, 32.</p>
+    <p><em>ⲉⲛⲉ ⲁⲕⲧⲁⲙⲟⲓ ⲡⲉ ⲛⲁⲓⲛⲁⲟⲩⲟⲣⲡⲕ ⲡⲉ ϧⲉⲛ ⲟⲩ ⲟⲩⲛⲟϥ</em> «si tu m'avais averti, je t'aurais renvoyé avec joie»<sup class="footnote">1</sup>.</p>
+    <p>D. Parfait.</p>
+    <p><i>Premier parfait <em>ⲁ-</em>, <em>ⲁ⸗</em>.</i></p>
+    <p>Le <i>premier parfait</i> indique une action complètement passée; c'est le temps historique:</p>
+    <p><em>ⲁϥⲱⲣⲕ ⲛ̀ϫⲉ ⲡϭⲟⲓⲥ</em> «le Seigneur a juré»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲁϥⲛⲁⲩ ⲉⲣⲟϥ ⲟⲩⲟϩ ⲁϥⲉⲣϣⲫⲏⲣⲓ ⲉⲙⲁϣⲱ</em> «il le vit et s'étonna beaucoup»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲟⲩⲟϩ ⲁ ⲫⲛⲟⲩϯ ⲑⲁⲙⲓⲟ ⲙ̀ⲡⲓⲣⲱⲙⲓ</em> «et Dieu créa l'homme»<sup class="footnote">4</sup>.</p>
+    <p>Lorsque le sujet est un nom, l'auxiliaire peut être répété avec l'affixe:</p>
+    <p><em>ⲁ ⲡⲟⲩϧⲣⲱⲟⲩ ⲁϥϭⲓⲥⲓ ⲙ̀ⲡⲉⲙⲑⲟ ⲙ̀ⲫϯ</em> «leur voix s'est élevée devant Dieu»<sup class="footnote">5</sup>.</p>
+    <p>Les formes de ce temps se confondent avec celles du 2<sup>e</sup> présent; on les distinguera facilement au moyen du contexte.</p>
+    <p>Pour <em>ⲁⲧⲉⲧⲉⲛ</em> 2 pl., on trouve souvent <em>ⲁⲣⲉⲧⲉⲛ</em> (cf. A B. p. 47, 48).</p>
+    <p>La négation se fait par l'auxiliaire <em>ⲙ̀ⲡⲉ-</em>, <em>ⲙ̀ⲡ⸗</em>:</p>
+    <p><em>ⲙ̀ⲡⲉ ϩⲗⲓ ⲛⲁⲩ ⲉ ⲡⲉϥⲥⲟⲛ</em> «personne ne vit son frère»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲙ̀ⲡⲉϥⲟⲩⲱϣ ⲉ-ⲟⲩⲟⲣⲡⲟⲩ ⲉⲃⲟⲗ</em> «il ne voulut pas les renvoyer»<sup class="footnote">7</sup>.</p>
+    <p class="footnote">1. Gen. 31, 27.</p>
+    <p class="footnote">2. Ps. 109, 5.</p>
+    <p class="footnote">3. Kef. 335.</p>
+    <p class="footnote">4. Gen. 1, 27.</p>
+    <p class="footnote">5. Gen. 19, 13.</p>
+    <p class="footnote">6. Ex. 10, 23.</p>
+    <p class="footnote">7. Ex. 10, 27.</p>
+    <p><em>ⲙ̀ⲡⲉ</em> a quelquefois le sens d'un futur prohibitif comme <em>ⲛ̀ⲛⲉ</em> (cf. A B. p. 102):</p>
+    <p><em>ⲟⲩⲏⲣⲡ ⲛⲉⲙ ⲟⲩⲥⲓⲕⲉⲣⲁ ⲙ̀ⲡⲉⲧⲉⲛⲥⲱⲟⲩ</em> «vous ne boirez ni vin ni boisson enivrante»<sup class="footnote">1</sup>.</p>
+    <p><i>Deuxième parfait <em>ⲉⲧⲁ-</em>, <em>ⲉⲧⲁ⸗</em>.</i></p>
+    <p>Le <i>deuxième parfait</i> indique aussi une action complètement passée. Par opposition au premier parfait il s'emploie:</p>
+    <p>1. Dans les propositions interrogatives:</p>
+    <p><em>ⲉⲧⲁⲕⲓ̀ ⲉ ⲡⲁⲓⲙⲁ ⲛ̀ⲥⲁ ⲟⲩ ⲛ̀ϩⲱⲃ</em> «pour quelle chose es-tu venu ici?»<sup class="footnote">2</sup>.</p>
+    <p><em>ϯⲉⲙⲓ ϫⲉ ⲉⲧⲁⲓⲓ̀ ⲉⲃⲟⲗ ⲑⲱⲛ</em> «je sais d'où je suis venu»<sup class="footnote">3</sup>. (Interrogation indirecte).</p>
+    <p>2. Dans les propositions subordonnées et surtout dans les propositions relatives:</p>
+    <p><em>ⲧⲉⲛⲉⲙⲓ ϫⲉ ⲉⲧⲁⲕⲓ̀ ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ ⲫϯ</em> «nous savons que tu es venu de Dieu»<sup class="footnote">4</sup>.</p>
+    <p>3. Souvent il peut se traduire par «<i>lorsque</i>» avec le parfait:</p>
+    <p><em>ⲉⲧⲁ ⲡⲓⲛⲁⲩ ϣⲱⲡⲓ</em> «lorsque le moment fut venu»<sup class="footnote">5</sup>.</p>
+    <p><em>ⲉⲧⲁⲥⲓ̀ ⲇⲉ ⲉϫⲉⲛ ϯϣⲱϯ ⲁⲥⲙⲁϩ-ⲧⲉⲥϩⲩⲇⲣⲓⲁ</em> quand elle fut arrivée au bord du puits, elle remplit sa jarre»<sup class="footnote">6</sup>.</p>
+    <p><em>ⲉⲧⲁ ⲧⲟⲟⲩⲓ ϣⲱⲡⲓ</em> «lorsque le matin fut arrivé»<sup class="footnote">7</sup>.</p>
+    <p>Dans ce cas, l'auxiliaire négatif est <em>ⲉⲧⲉⲙⲡⲉ-</em>, <em>ⲉⲧⲉⲙⲡ⸗</em> composé de <em>ⲉⲧⲁ</em> et <em>ⲙ̀ⲡⲉ</em>:</p>
+    <p><em>ⲟⲩⲟϩ ⲉⲧⲉⲙⲡⲉ ϯϭⲣⲟⲙⲡⲓ ϫⲉⲙ-ⲙⲁⲛ̀ⲉⲙⲧⲟⲛ ⲛ̀ⲛⲉⲥϭⲁⲗⲁⲩϫ ⲁⲥⲧⲁⲥⲑⲟ</em> «la colombe, n'ayant point trouvé d'endroit pour reposer ses pieds, s'en revint»<sup class="footnote">8</sup>.</p>
+    <p class="footnote">1. Lév. 10, 9.</p>
+    <p class="footnote">2. Test. 11.</p>
+    <p class="footnote">3. Jean 8, 14.</p>
+    <p class="footnote">4. Jean 3, 2.</p>
+    <p class="footnote">5. D. 536.</p>
+    <p class="footnote">6. Gen. 24, 16.</p>
+    <p class="footnote">7. Gen. 19, 15.</p>
+    <p class="footnote">8. Gen. 8, 9.</p>
   </div>
 </div>
 	</body>
