--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3478,6 +3478,41 @@ Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> d
     <p class="footnote">6. Gen. 24, 16.</p>
     <p class="footnote">7. Gen. 19, 15.</p>
     <p class="footnote">8. Gen. 8, 9.</p>
+    <p><em>ⲙ̀ⲡⲁⲧⲉ</em>, <em>ⲙ̀ⲡⲁⲧ⸗</em>.</p>
+    <p>Avec les suffixes:</p>
+    <table>
+      <tr>
+        <th></th><th>Sing.</th><th></th><th>Pl.</th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ⲙ̀ⲡⲁϯ</em></td><td>1.</td><td><em>ⲙ̀ⲡⲁⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ⲙ̀ⲡⲁⲧⲉⲕ</em></td><td>2.</td><td><em>ⲙ̀ⲡⲁⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲙ̀ⲡⲁⲧⲉ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ⲙ̀ⲡⲁⲧⲉϥ</em></td><td>3.</td><td><em>ⲙ̀ⲡⲁⲧⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ⲙ̀ⲡⲁⲧⲉⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>Devant un nom: <em>ⲙ̀ⲡⲁⲧⲉ-</em>.</p>
+    <p>Cet auxiliaire a deux sens:</p>
+    <p>1. «Pas encore» avec le passé.</p>
+    <p><em>ⲙ̀ⲡⲁⲧⲉⲥⲓ̀ ⲛ̀ϫⲉ ⲧⲁⲟⲩⲛⲟⲩ</em> «mon heure n'est pas encore venue»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲙ̀ⲡⲁⲧⲉⲧⲉⲛ ⲉⲙⲓ ⲟⲩⲇⲉ ⲧⲉⲧⲉⲛⲓⲣⲓ ⲙ̀ⲫⲙⲉⲩⲓ ⲁⲛ ⲙ̀ⲡⲓⲉ̅ ⲛ̀ⲱⲓⲕ ⲛ̀ⲧⲉ ⲡⲓⲉ̅ ⲛ̀ϣⲟ</em> «vous n'avez pas encore compris et vous ne vous rappelez pas les cinq pains des cinq mille hommes»<sup class="footnote">2</sup>.</p>
+    <p>2. «Avant que, avant de».</p>
+    <p><em>ⲙ̀ⲡⲁⲧⲉ ⲫⲓⲗⲓⲡⲡⲟⲥ ⲙⲟⲩϯ ⲉⲣⲟⲕ</em> «avant que Philippe t'appelle»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲁⲩⲟⲩⲱⲙ ⲙ̀ⲡⲁⲧⲟⲩⲛ̀ⲕⲟⲧ</em> «ils mangèrent avant de se coucher»<sup class="footnote">4</sup>.</p>
+    <p><i>Remarque.</i> Sur le modèle de <em>ϣⲁⲛⲧⲉ</em> et <em>ϣⲁⲧⲉ</em> pour le subjonctif, on a, de <em>ⲙ̀ⲡⲁⲧⲉ</em>, formé <em>ⲙ̀ⲡⲁⲛⲧⲉ-</em> qui est moins usuel et moins régulier.</p>
+    <p class="footnote">1. Jean 2, 4.</p>
+    <p class="footnote">2. Mt. 16, 9.</p>
+    <p class="footnote">3. Jean 1, 19.</p>
+    <p class="footnote">4. Gen. 19, 3.</p>
   </div>
 </div>
 	</body>
