--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3513,6 +3513,65 @@ Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> d
     <p class="footnote">2. Mt. 16, 9.</p>
     <p class="footnote">3. Jean 1, 19.</p>
     <p class="footnote">4. Gen. 19, 3.</p>
+    <p>E. Temps composés.</p>
+    <p>1°. Avec <em>ⲛⲉ</em>.</p>
+    <p>L'auxiliaire <em>ⲛⲉ</em> s'unit à quelques autres auxiliaires et leur donne le sens du parfait s'ils avaient celui du présent, et du plus-que-parfait s'ils avaient celui du parfait. Il s'emploie:</p>
+    <p>1. Avec <em>ⲁ</em> du parfait pour former le plus-que-parfait de l'indicatif:</p>
+    <p><em>ⲛⲉ ⲁ ⲡϭⲟⲓⲥ ⲣⲉϧⲧ ⲛⲓⲃⲁⲕⲓ ⲡⲉ</em> «le Seigneur avait renversé les villes»<sup class="footnote">1</sup>.</p>
+    <p>2. Avec <em>ϣⲁⲣⲉ</em>:</p>
+    <p><em>ⲛⲉ ϣⲁϥⲓ̀ ⲉⲃⲟⲗ ⲙ̀ⲫⲛⲁⲩ ⲙ̀ⲡⲓⲕⲁⲩⲙⲁ</em> «il avait coutume de sortir au moment de la chaleur»<sup class="footnote">2</sup>.</p>
+    <p>3. Avec <em>ⲙ̀ⲡⲉ</em>, <em>ⲙ̀ⲡⲁⲣⲉ</em>, <em>ⲙ̀ⲡⲁⲧⲉ</em>:</p>
+    <p><em>ⲛⲉ ⲙ̀ⲡⲁⲧⲉ ⲓ︤ⲏ︦ⲥ︥ ϭⲓⲱⲟⲩ ⲡⲉ</em> «Jésus n'avait pas encore été glorifié»<sup class="footnote">3</sup>.</p>
+    <p>2°. Avec <em>ⲉ</em>.</p>
+    <p>Cet auxiliaire forme les composés suivants:</p>
+    <table>
+      <tr>
+        <td><em>ⲉⲁ-</em></td><td>premier parfait,</td>
+      </tr>
+      <tr>
+        <td><em>ⲉϣⲁⲣⲉ-</em></td><td>présent d'habitude,</td>
+      </tr>
+      <tr>
+        <td><em>ⲉⲛⲁⲣⲉ-</em></td><td>imparfait,</td>
+      </tr>
+    </table>
+    <p><em>ⲉⲙⲡⲉ</em>, <em>ⲉⲙⲡⲁⲣⲉ</em>, <em>ⲉⲙⲡⲁⲧⲉ</em>.</p>
+    <p>Dans ces trois derniers on néglige souvent d'écrire <em>ⲉ</em>, et il reste: <em>ⲙ̀ⲡⲉ</em>, <em>ⲙ̀ⲡⲁⲣⲉ</em>, <em>ⲙ̀ⲡⲁⲧⲉ</em>.</p>
+    <p class="footnote">1. Gen. 19, 29.</p>
+    <p class="footnote">2. Kef. 335.</p>
+    <p class="footnote">3. Jean 7, 39.</p>
+    <p>Ces différents temps, avec leur sens respectif, ont la même syntaxe que le 3<sup>e</sup> présent formé de <em>ⲉ</em> tout seul (238).</p>
+    <p>Ils forment des propositions <i>dépendantes</i> qui suivent la proposition principale sans conjonction, comme une sorte d'<i>apposition</i> ou comme un participe français. Elles peuvent aussi la précéder:</p>
+    <p><em>ⲁϥⲧⲟⲩⲛⲟⲥⲥ ⲉⲁϥⲁⲙⲟⲛⲓ ⲛ̀ⲧⲉⲥϫⲓϫ</em> «il la ressuscita après avoir pris sa main»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲡⲱⲥ ⲫⲁⲓ ⲥⲱⲟⲩⲛ ⲛ̀ⲥϧⲁⲓ ⲙ̀ⲡⲉϥⲥⲁⲃⲟ</em> «comment celui-ci sait-il écrire, n'ayant pas étudié?»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲟⲩⲟϩ ⲁⲃⲣⲁⲁⲙ ⲛⲉ ⲟⲩϧⲉⲗⲗⲟ ⲡⲉ ⲉⲁϥⲁⲓⲁⲓ ϧⲉⲛ ⲛⲉϥⲉϩⲟⲟⲩ</em> «et Abraham était devenu vieux, ses jours s'étant augmentés»<sup class="footnote">3</sup>.</p>
+    <p><em>ⲉⲁⲣⲉⲧⲉⲛⲉⲙⲓ ⲟⲩⲛ ϫⲉ ϩⲁⲛⲛⲟⲩϯ ⲁⲛ ⲛⲉ ⲙ̀ⲡⲉⲣⲉⲣϩⲟϯ ϧⲁⲧⲟⲩϩⲏ</em> «sachant donc qu'ils ne sont pas des dieux, ne les craignez pas»<sup class="footnote">4</sup>.</p>
+    <p>II. Subjonctif.</p>
+    <p>Le subjonctif est formé de la particule <em>ⲛ̀ⲧⲉ- ⲛ̀ⲧ⸗</em> dans laquelle <em>ⲛ</em> est parfois supprimé:</p>
+    <p><em>ⲟⲩⲟⲛⲧⲏⲓ ⲛ̀ⲫⲏ ⲉⲧⲉϥⲛⲁⲓ̀ ⲧⲉϥⲉⲣⲃⲟⲏⲑⲓⲛ ⲉⲣⲟⲓ</em> «j'ai quelqu'un qui viendra me secourir»<sup class="footnote">5</sup>.</p>
+    <p>Comme sens, le subjonctif n'est limité à aucun temps en particulier; il peut indiquer le présent, le passé et le futur. Il est d'un usage très fréquent en copte. Il s'emploie:</p>
+    <p>1. Dans la dépendance <i>immédiate</i>, sans conjonction, après les verbes qui expriment la volonté, l'exhortation, la demande, le commandement:</p>
+    <p class="footnote">1. Mc. 1, 31.</p>
+    <p class="footnote">2. Jean 7, 15.</p>
+    <p class="footnote">3. Gen. 24, 1.</p>
+    <p class="footnote">4. Bar. 6, 65.</p>
+    <p class="footnote">5. Fr. R. 109, 8. Pour <em>ⲛ̀ⲫⲏ</em> au lieu de la forme régulière <em>ⲙ̀ⲫⲏ</em>, cf. 28 <i>note</i>.</p>
+    <p><em>ⲭⲟⲩⲱϣ ⲛ̀ⲧⲁⲧⲁⲥⲑⲟ ⲙ̀ⲡⲉⲕϣⲏⲣⲓ ⲉⲡⲓⲕⲁϩⲓ ⲉⲧⲁⲕⲓ̀ ⲉⲃⲟⲗ ⲛ̀ϧⲏⲧϥ</em> «tu veux que je ramène ton fils au pays d'où tu es venu?»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲙⲁⲣⲉⲛⲙⲟⲩϯ ⲉ ϯⲁⲗⲟⲩ ⲛ̀ⲧⲉⲛϣⲉⲛⲥ ⲉ ⲫⲁ ⲣⲱⲥ</em> «appelons la fille pour lui demander ce qui lui plaît»<sup class="footnote">2</sup>.</p>
+    <p><em>ϩⲉⲛⲕ ⲉⲣⲟⲓ ⲡⲁϣⲏⲣⲓ ⲛ̀ⲧⲁϫⲟⲙϫⲉⲙ ⲉⲣⲟⲕ</em> «approche-toi de moi, mon fils, pour que je te palpe»<sup class="footnote">3</sup>.</p>
+    <p><em>ϣⲁⲧⲟⲩ ⲟⲩⲟϩ ⲫⲁⲥⲟⲩ ⲛ̀ⲧⲁⲟⲩⲛⲟϥ ⲙ̀ⲙⲟϥ</em> «immole-les et fais-les cuire afin que je me réjouisse»<sup class="footnote">4</sup>.</p>
+    <p>2. Après les verbes <i>impersonnels</i> comme <em>ⲥϣⲉ</em>, <em>ϩⲱϯ</em> «il faut», <em>ⲁⲛⲁⲅⲕⲏ</em>, <em>ⲭⲣⲓⲁ</em> «(il y a) nécessité», <em>ⲟⲩⲟⲛϣϫⲟⲙ</em> «il se peut», <em>ⲙ̀ⲙⲟⲛ ϣϫⲟⲙ</em> «il ne se peut pas», et les verbes employés <i>impersonnellement</i> avec l'affixe neutre <em>ⲥ</em>:</p>
+    <p><em>ⲁⲛⲁⲅⲕⲏ ⲅⲁⲣ ⲛ̀ⲧⲟⲩⲓ̀ ⲛ̀ϫⲉ ⲛⲓⲥⲕⲁⲛⲇⲁⲗⲟⲛ</em> «il est nécessaire que les scandales arrivent»<sup class="footnote">5</sup>.</p>
+    <p><em>ϩⲱϯ ⲛ̀ⲧⲉ ⲡϣⲏⲣⲓ ⲙ̀ⲫⲣⲱⲙⲓ ϭⲓ ⲛ̀ⲟⲩⲙⲏϣ ⲛ̀ϧⲓⲥⲓ</em> «il faut que le fils de l'homme souffre beaucoup»<sup class="footnote">6</sup>.</p>
+    <p>3. Dans l'état de dépendance <i>éloignée</i> pour exprimer le <i>but</i>, <i>l'intention</i>, <i>la crainte</i>.</p>
+    <p>Il est alors précédé d'une des conjonctions grecques suivantes:</p>
+    <p><em>ϩⲓⲛⲁ</em>, <em>ϩⲱⲡⲱⲥ</em> «afin que», <em>ϩⲱⲥⲧⲉ</em> «de sorte que», <em>ⲙⲏⲡⲱⲥ</em>, <em>ⲙⲏⲡⲟⲧⲉ</em> «de peur que», <em>ⲓⲙⲏϯ</em> «à moins que», ou des conjonctions coptes <em>ϫⲉ</em> «que», <em>ϣⲁ</em> «jusqu'à ce que».</p>
+    <p class="footnote">1. Gen. 24, 5.</p>
+    <p class="footnote">2. Gen. 24, 57.</p>
+    <p class="footnote">3. Gen. 27, 21.</p>
+    <p class="footnote">4. Test. 7.</p>
+    <p class="footnote">5. Mt. 18, 7.</p>
+    <p class="footnote">6. Mc. 8, 31.</p>
   </div>
 </div>
 	</body>
