--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -3572,6 +3572,62 @@ Lorsque le sujet est indéterminé, il est introduit par <em>ⲟⲩⲟⲛ</em> d
     <p class="footnote">4. Test. 7.</p>
     <p class="footnote">5. Mt. 18, 7.</p>
     <p class="footnote">6. Mc. 8, 31.</p>
+    <p><em>ⲙⲏⲡⲟⲧⲉ ⲛ̀ⲧⲉ ⲡⲓⲁⲛⲧⲓⲇⲓⲕⲟⲥ ⲧⲏⲓⲕ ⲙ̀ⲡⲓⲕⲣⲓⲧⲏⲥ</em> «de peur que l'adversaire ne te livre au juge»<sup class="footnote">1</sup>.</p>
+    <p><em>ⲁϫⲟⲥ ⲙ̀ⲡⲁⲓⲱⲛⲓ ϫⲉ ⲛ̀ⲧⲉϥⲉⲣⲱⲓⲕ</em> «dis à cette pierre qu'elle se change en pain»<sup class="footnote">2</sup>.</p>
+    <p><em>ⲛ̀ⲛⲉⲧⲉⲛϭⲟϩ ⲉⲣⲟϥ ϩⲓⲛⲁ ⲛ̀ⲧⲉⲧⲉⲛϣⲧⲉⲙⲙⲟⲩ</em> «vous n'y toucherez pas afin de ne pas mourir»<sup class="footnote">3</sup>.</p>
+    <p>Le subjonctif et <em>ϣⲁ</em> «jusqu'à ce que» s'unissent dans l'écriture:</p>
+    <p>Avec les suffixes:</p>
+    <table>
+      <tr>
+        <th></th><th>Sing.</th><th></th><th>Pl.</th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ϣⲁⲛⲧⲁ</em> ou <em>ϣⲁⲛϯ</em></td><td>1.</td><td><em>ϣⲁⲛⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ϣⲁⲛⲧⲉⲕ</em></td><td>2.</td><td><em>ϣⲁⲛⲧⲉⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ϣⲁⲛⲧⲉ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ϣⲁⲛⲧⲉϥ</em></td><td>3.</td><td><em>ϣⲁⲛⲧⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ϣⲁⲛⲧⲉⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>Devant un nom: <em>ϣⲁⲛⲧⲉ-</em></p>
+    <p>Cette forme s'abrège en perdant le <em>ⲛ</em> et devient le subjonctif beaucoup plus fréquent:</p>
+    <p>Avec les suffixes:</p>
+    <table>
+      <tr>
+        <th></th><th>Sing.</th><th></th><th>Pl.</th>
+      </tr>
+      <tr>
+        <td>1.</td><td><em>ϣⲁϯ</em></td><td>1.</td><td><em>ϣⲁⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>2 m.</td><td><em>ϣⲁⲧⲉⲕ</em></td><td>2.</td><td><em>ϣⲁⲧⲉⲧⲉⲛ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ϣⲁⲧⲉ</em></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>3 m.</td><td><em>ϣⲁⲧⲉϥ</em></td><td>3.</td><td><em>ϣⲁⲧⲟⲩ</em></td>
+      </tr>
+      <tr>
+        <td>f.</td><td><em>ϣⲁⲧⲉⲥ</em></td><td></td><td></td>
+      </tr>
+    </table>
+    <p>Devant un nom: <em>ϣⲁⲧⲉ-</em></p>
+    <p><em>ϣⲱⲡⲓ ⲙ̀ⲙⲁⲩ ϣⲁϯϫⲟⲥ ⲛⲁⲥ</em> «reste là jusqu'à ce que je te le dise»<sup class="footnote">4</sup>.</p>
+    <p><em>ⲟⲩⲕⲉⲣⲙⲓ ⲉϥⲉⲓ̀ ⲉⲃⲟⲗ ϧⲉⲛ ⲧⲫⲉ ⲉϧⲣⲏⲓ ⲉϫⲱⲕ ϣⲁⲧⲉϥϥⲟⲧⲕ ⲉⲃⲟⲗ</em> «la cendre descendra du ciel sur ta tête jusqu'à ce qu'elle te détruise»<sup class="footnote">5</sup>.</p>
+    <p class="footnote">1. Mt. 5, 25.</p>
+    <p class="footnote">2. Luc 4, 3.</p>
+    <p class="footnote">3. Gen. 3, 3.</p>
+    <p class="footnote">4. Mt. 2, 13.</p>
+    <p class="footnote">5. Deut. 28, 24.</p>
   </div>
 </div>
 	</body>
